css/main.css
/* ... */
#heroes .heroes-list .douglas-crockford { margin-right:20px; width:620px; height:347px; } 
#heroes .heroes-list .douglas-crockford .hero-name { font-size:40px; }
#heroes .heroes-list .douglas-crockford .photo { right:0; top:-24px; width:327px; height:371px; background:url('../img/hero-douglas.png') no-repeat; z-index:5; }
#heroes .heroes-list .AB { margin-top:154px; width:300px; height:533px; background:url('../img/hero-ab.jpg') no-repeat; }
#heroes .heroes-list .AB .spikes { width:300px; }
#heroes .heroes-list .AB .specialguest.photo { right:0; bottom:0; width:300px; height:533px; background:url('../img/hero-betao.png') no-repeat; }
#heroes .heroes-list .LV { margin:-316px 20px 0 0; width:300px; height:317px; background:url('../img/hero-lv.jpg') no-repeat; }
#heroes .heroes-list .thibault-imbert { margin-top:-316px; width:300px; height:317px; }
#heroes .heroes-list .thibault-imbert .spikes { width:300px; background:url('../img/spikes-thibault.png') no-repeat; }
#heroes .heroes-list .thibault-imbert .hero-name { font-size:30px; }
#heroes .heroes-list .thibault-imbert .photo { right:40px; bottom:0; width:260px; height:311px; background:url('../img/hero-thibault.png') no-repeat; }
#heroes .heroes-list .robert-nyman { margin-top:20px; clear:both; width:940px; height:153px; }
#heroes .heroes-list .robert-nyman .spikes { width:940px; height:142px; background:url('../img/spikes-robert.png') no-repeat; }
#heroes .heroes-list .robert-nyman .photo { right:40px; bottom:0; width:567px; height:153px; background:url('../img/hero-robert.png') no-repeat; }
#heroes .heroes-list .JG { margin:20px 20px 0 0; width:300px; height:560px; background:url('../img/hero-jg.jpg') no-repeat; }
#heroes .heroes-list .marcel-angus { margin-top:20px; width:620px; height:311px; }
#heroes .heroes-list .marcel-angus .hero-name { display:inline-block; width:369px; }
#heroes .heroes-list .marcel-angus .photo { right:10px; bottom:-2px; width:418px; height:313px; background:url('../img/heroes-marcel-angus.png') no-repeat; }
#heroes .heroes-list .PI { margin-top:20px; width:620px; height:229px; background:url('../img/hero-pi.jpg') no-repeat; }
#heroes .heroes-list .JW { margin:20px 20px 0 0; width:460px; height:223px; background:url('../img/hero-jw.jpg') no-repeat; }
#heroes .heroes-list .stoyan-stefanov { margin-top:20px; width:460px; height:223px; }
#heroes .heroes-list .stoyan-stefanov .spikes { width:460px; height:192px; background:url('../img/spikes-stoyan.png') no-repeat; }
#heroes .heroes-list .stoyan-stefanov .photo { left:0; bottom:0; width:198px; height:212px; background:url('../img/hero-stoyan.png') no-repeat; }
#heroes .heroes-list .caridy-patino { margin:20px 20px 0 0; width:620px; height:260px; }
#heroes .heroes-list .caridy-patino .photo { right:0; bottom:0; width:262px; height:261px; background:url('../img/hero-caridy.png') no-repeat; }
#heroes .heroes-list .AR { margin-top:20px; width:300px; height:441px; background:url('../img/hero-ar.jpg') no-repeat; }
#heroes .heroes-list .BW { margin:-152px 20px 0 0; width:302px; height:237px; background:url('../img/hero-bw.jpg') no-repeat; }
#heroes .heroes-list .renato-mangini { margin-top:-152px; width:300px; height:235px; }
#heroes .heroes-list .renato-mangini .spikes { width:300px; height:228px; background:url('../img/spikes-renato.png') no-repeat; }
#heroes .heroes-list .renato-mangini .photo { right:0; bottom:0; width:198px; height:235px; background:url('../img/hero-renato.png') no-repeat; }
#heroes .heroes-list .renato-mangini .hero-company { text-align:right; }

/* HEROES OVERLAY */
#heroes-overlay { position:fixed; top:50%; left:50%; overflow:hidden; margin:-275px 0 0 -450px; width:936px; height:554px; background:url('../img/bg-overlay.png') no-repeat; z-index:1000; }
#heroes-overlay .previous { position:absolute; left:10px; top:50%; width:30px; height:38px; background-position:0 -370px; cursor:pointer; z-index:10; color:transparent; }
#heroes-overlay .previous .sign { position:absolute; top:1px; left:7px; width:14px; height:30px; background-position:0 -420px; }
#heroes-overlay .next { position:absolute; right:10px; top:50%; width:30px; height:38px; background-position:-153px -370px; cursor:pointer; z-index:10; color:transparent; }
#heroes-overlay .next .sign { position:absolute; top:1px; right:9px; width:17px; height:30px; background-position:-165px -420px; }
#heroes-overlay .sequence-canvas { height:100%; width:100%; }
#heroes-overlay .sequence-canvas > li { position:absolute; }
#heroes-overlay .sequence-canvas > li > * { position:absolute; }
#heroes-overlay .portrait { opacity:0; top:10px; left:40px; -webkit-transition:all 1s ease; -moz-transition:all 1s ease; -o-transition:all 1s ease; -ms-transition:all 1s ease; transition:all 1s ease; }
#heroes-overlay .animate-in .photo { opacity:1; -webkit-transition:all 1s ease; -moz-transition:all 1s ease; -o-transition:all 1s ease; -ms-transition:all 1s ease; transition:all 1s ease; }
#heroes-overlay .animate-in .portrait { opacity:1; -webkit-transition:all 1s ease; -moz-transition:all 1s ease; -o-transition:all 1s ease; -ms-transition:all 1s ease; transition:all 1s ease; }
#heroes-overlay .animate-out .portrait { opacity:0; -webkit-transition:all 1s ease; -moz-transition:all 1s ease; -o-transition:all 1s ease; -ms-transition:all 1s ease; transition:all 1s ease; }
#heroes-overlay .speaker { opacity:0; left:200px; -webkit-transition:left 1s ease; -moz-transition:left 1s ease; -o-transition:left 1s ease; -ms-transition:all 1s ease; transition:left 1s ease; }
#heroes-overlay .animate-in .speaker { opacity:1; left:350px; transition:all 1s ease; }
#heroes-overlay .animate-out .speaker { opacity:0; transition:all 1s ease; }
#heroes-overlay .portrait .share { position:absolute; top:400px; margin:46px 0 0 31px; padding:0; }
#heroes-overlay .portrait .second { top:300px; }
#heroes-overlay .portrait { position:relative; float:left; width:350px; }
/* ... */

